--- a/weblamoon/public/index.html
+++ b/weblamoon/public/index.html
@@ -11,7 +11,7 @@
   </title>
 </head>
 
-<body>
+<body style="background-color: #eed3aa;">
   <noscript>
     <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
         Please enable it to continue.</strong>
