--- a/weblamoon/public/index.html
+++ b/weblamoon/public/index.html
@@ -1,3 +1,4 @@
+<link href="https://fonts.cdnfonts.com/css/br-firma" rel="stylesheet">
 <!DOCTYPE html>
 <html lang="">
 
@@ -21,3 +22,7 @@
 </body>
 
 </html>
+
+<style>
+  @import url('https://fonts.cdnfonts.com/css/br-firma');
+</style>
