--- a/weblamoon/public/index.html
+++ b/weblamoon/public/index.html
@@ -1,6 +1,6 @@
 <link href="https://fonts.cdnfonts.com/css/br-firma" rel="stylesheet">
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
