--- a/weblamoon/public/index.html
+++ b/weblamoon/public/index.html
@@ -12,7 +12,7 @@
   </title>
 </head>
 
-<body style="background-color: #ffefd8;">
+<body class="bg-blue-grey-darken-2">
   <noscript>
     <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
         Please enable it to continue.</strong>
