--- a/weblamoon/public/index.html
+++ b/weblamoon/public/index.html
@@ -12,7 +12,7 @@
   </title>
 </head>
 
-<body class="bg-cyan-lighten-5">
+<body class="bg-grey-darken-4">
   <noscript>
     <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
         Please enable it to continue.</strong>
